add advanced project

--- a/.webpack/renderer/main_window/index.html
+++ b/.webpack/renderer/main_window/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IpXact Tool</title>
-
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self';">
   <script defer src="/main_window/index.js"></script></head>
   <body>
     <div id="root"></div>
