--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IpXact Tool</title>
-
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self';">
   </head>
   <body>
     <div id="root"></div>
