--- a/.webpack/renderer/main_window/index.html
+++ b/.webpack/renderer/main_window/index.html
@@ -1,1 +1,10 @@
-<!doctype html><html><head><meta charset="UTF-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self';"><script defer="defer" src="../main_window/index.js"></script></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self';">
+  <script defer src="/main_window/index.js"></script></head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
